# LpCVT_recon

./: .clang-format  .gitignore  CMakeLists.txt  Recon_multi.py
Base/: CMakeLists.txt  Mesh.cpp  MeshAdaptor.cpp  NNSearch.cpp  PointCloud.cpp
Base/Base/: Mesh.h  MeshAdaptor.h  NNSearch.h  PointCloud.h
NMCVT/: CMakeLists.txt  LpCVTIS.cpp  LpCVTWrap.cpp
NMCVT/NMCVT/: LpCVTIS.h  LpCVTWrap.h
cmake/: geogram.cmake  stan_math.cmake
src/: CMakeLists.txt  LpCVTIS.cpp  LpCVTWrap.cpp  Mesh.cpp  MeshAdaptor.cpp  Remesher.cpp  main.cpp
src/Base/: Mesh.h  MeshAdaptor.h
src/CVT/: LpCVTIS.h  LpCVTWrap.h  QuadRemesher.h  Remesher.h
src_pc/: CMakeLists.txt  Co3neCVT.cpp  Co3neThread.cpp  Co3ne_NM.cpp  main.cpp
src_pc/CVT_PC/: Co3neCVT.h  Co3neManifoldExtraction.h  Co3neRVD.h  Co3neT.h  Co3neThread.h  Co3ne_NM.h
src_pc/CVT_UTILS/: CompareTriangles.h  Utils.h
src_pc/VSP/: vsp.h
vis/: CMakeLists.txt  main.cpp
